[package]
name = "gameshow-api"
version = "0.1.0"
authors = ["FlixCoder"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.5"
tokio = { version = "1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "*"
rand = "0.8"

[profile.release]
lto = true

